--- a/main.css
+++ b/main.css
@@ -83,4 +83,8 @@ hr {
     padding: 0;
 }
 
+.list-p:hover {
+    background-color: rgba(128, 128, 128, 0.308);
+}
+
 /*---------------------------------------------*/
