--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     background-color: black;
     cursor: default;
+    overflow: hidden;
 }
 
 hr {
@@ -55,6 +56,10 @@ hr {
     color: white;
     padding: 1rem;
     height: 50vh;
+}
+
+#canvasArea {
+    z-index: -1;
 }
 
 /*---------------------------------------------*/
