--- a/src/main.css
+++ b/src/main.css
@@ -66,6 +66,26 @@ hr {
 
 .slider {
     flex: 1;
+
+    /* Override default CSS styles */
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 5px;
+    background: grey;
+    outline: none;
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: black;
+    border: 2px solid white;
+    cursor: pointer;
 }
 
 .timer {
@@ -90,6 +110,25 @@ hr {
 
 .list-p:hover {
     background-color: rgba(128, 128, 128, 0.308);
+}
+
+#volume-slider {
+    -webkit-appearance: none;
+    height: 5px;
+    align-self: center;
+    border-radius: 5px;
+    background: grey;
+    outline: none;
+}
+
+#volume-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: white;
+    cursor: pointer;
 }
 
 /*---------------------------------------------*/
